--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-dinky
+theme: jekyll-theme-cayman
 title: Yunus Emre Kırlı Progress Report
 description: IE 582 Fall 2020 - Bogazici University
