--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: Yunus Emre Kırlı - Progress Report
 description: IE 582 - Statistical Learning For Data Mining
-description: Fall 2020
-description: Boğaziçi University
+Fall 2020
+Boğaziçi University
