--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 theme: jekyll-theme-cayman
-title: Yunus Emre Kırlı - Progress Report
-description: IE 582 - Statistical Learning For Data Mining
-Fall 2020
-Boğaziçi University
+title: Yunus Emre Kırlı - Fall 2020 Progress Report
+description: IE 582 - Statistical Learning For Data Mining Boğaziçi University
